--- a/index.html
+++ b/index.html
@@ -6,19 +6,11 @@
     <body>
         
         <link rel="stylesheet" href="smart.css">
-<<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/62f6851437898912e962a8d9/1ga9ffmcb';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+       <script>(function(w, d) { w.CollectId = "63306df16405a40542b3fe03"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script");
+       s.setAttribute("type", "text/javascript"); s.async=true; s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script><script>(function(w, d) { w.CollectId = "63306df16405a40542b3fe03";
+       var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript");
+       s.async=true; s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>
+  
         <p id="sg">SMART GARDEN</p>
         <div id="future">THE FUTURE IS HERE</div>
         <div id="img1"><img src="sg6.jpeg" width="1260" height="600"> </div>
